; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/wpa/wpa_supplicant/extr_rrm.c_wpas_rrm_neighbor_rep_timeout_handler.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/wpa/wpa_supplicant/extr_rrm.c_wpas_rrm_neighbor_rep_timeout_handler.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.rrm_data = type { i32*, i32 (i32*, i32*)* }

@MSG_ERROR = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [40 x i8] c"RRM: Unexpected neighbor report timeout\00", align 1
@MSG_DEBUG = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [38 x i8] c"RRM: Notifying neighbor report - NONE\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, i8*)* @wpas_rrm_neighbor_rep_timeout_handler to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @wpas_rrm_neighbor_rep_timeout_handler(i8* %0, i8* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca %struct.rrm_data*, align 8
  store i8* %0, i8** %3, align 8
  store i8* %1, i8** %4, align 8
  %6 = load i8*, i8** %3, align 8
  %7 = bitcast i8* %6 to %struct.rrm_data*
  store %struct.rrm_data* %7, %struct.rrm_data** %5, align 8
  %8 = load %struct.rrm_data*, %struct.rrm_data** %5, align 8
  %9 = getelementptr inbounds %struct.rrm_data, %struct.rrm_data* %8, i32 0, i32 1
  %10 = load i32 (i32*, i32*)*, i32 (i32*, i32*)** %9, align 8
  %11 = icmp ne i32 (i32*, i32*)* %10, null
  br i1 %11, label %15, label %12

12:                                               ; preds = %2
  %13 = load i32, i32* @MSG_ERROR, align 4
  %14 = call i32 @wpa_printf(i32 %13, i8* getelementptr inbounds ([40 x i8], [40 x i8]* @.str, i64 0, i64 0))
  br label %29

15:                                               ; preds = %2
  %16 = load i32, i32* @MSG_DEBUG, align 4
  %17 = call i32 @wpa_printf(i32 %16, i8* getelementptr inbounds ([38 x i8], [38 x i8]* @.str.1, i64 0, i64 0))
  %18 = load %struct.rrm_data*, %struct.rrm_data** %5, align 8
  %19 = getelementptr inbounds %struct.rrm_data, %struct.rrm_data* %18, i32 0, i32 1
  %20 = load i32 (i32*, i32*)*, i32 (i32*, i32*)** %19, align 8
  %21 = load %struct.rrm_data*, %struct.rrm_data** %5, align 8
  %22 = getelementptr inbounds %struct.rrm_data, %struct.rrm_data* %21, i32 0, i32 0
  %23 = load i32*, i32** %22, align 8
  %24 = call i32 %20(i32* %23, i32* null)
  %25 = load %struct.rrm_data*, %struct.rrm_data** %5, align 8
  %26 = getelementptr inbounds %struct.rrm_data, %struct.rrm_data* %25, i32 0, i32 1
  store i32 (i32*, i32*)* null, i32 (i32*, i32*)** %26, align 8
  %27 = load %struct.rrm_data*, %struct.rrm_data** %5, align 8
  %28 = getelementptr inbounds %struct.rrm_data, %struct.rrm_data* %27, i32 0, i32 0
  store i32* null, i32** %28, align 8
  br label %29

29:                                               ; preds = %15, %12
  ret void
}

declare dso_local i32 @wpa_printf(i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
